--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -1079,17 +1079,22 @@ box-shadow: 0;
   transition: all 0.3s ease-out;
 }
 .featured-categories .thumbnail .title {
-  position: absolute;
+  position: relative;
+  display: block;
+  top: 0;
   left: 0;
-  bottom: 5%;
-  padding: 10px 15px;
-  background-color: #dd2c00;
-  color: #ffffff;
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  padding: 5px;
+  background-color: transparent;
+  border-top: 0px solid #e5e5e5;
+  border-bottom: 0px solid #e5e5e5;
+  color: #dd2c00;
+  font-size: 16px;
+  font-weight: bold;
+  z-index: 5;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 .featured-categories .thumbnail .link {
   position: absolute;
