Корректировка путей в geo зонах

--- a/app/webroot/css/jquery/plugins/lou-multi-select/multi-select.css
+++ b/app/webroot/css/jquery/plugins/lou-multi-select/multi-select.css
@@ -1,5 +1,5 @@
 .ms-container{
-  background: transparent url('../img/jquery/plugins/lou-multi-select/arrow.png') no-repeat 175px 83px;
+  background: transparent url('../../../../img/jquery/plugins/lou-multi-select/arrow.png') no-repeat 175px 83px;
 }
 
 .ms-container:after{
