--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -32,8 +32,8 @@ select:focus {
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 0 1px 8px rgba(0,0,0,.23),0 1px 8px rgba(0,0,0,.16);  
-  border-radius: 0px;
   border: 0;
+  border-radius: 4px;
 }
 
 .row.small {
@@ -122,13 +122,12 @@ a#scrollup i{
 
 .nav-wrapper
 {
-    min-height:50px;
+  min-height:50px;
 }
 
 @media (max-width: 767px) {
-.nav-wrapper
-{
-    min-height:6px;
+.nav-wrapper {
+  min-height:6px;
 }
 }
 
@@ -140,25 +139,24 @@ a#scrollup i{
 }
 
 .navbar {
-position: relative;
-min-height: 50px;
-margin-bottom: 20px;
-border: 0px;
-border-radius: 0px;
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 20px;
+  border: 0px;
 }
 
 .navbar-toggle {
-border: 0px;
+  border: 0px;
 }
 
 .navbar-default .navbar-nav > li > a:hover, 
 .navbar-default .navbar-nav > li > a:focus, 
 .navbar-default .navbar-nav > li > a:active {
- color: #fff; 
+  color: #fff; 
 }
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-background-color: #c92600;
+  background-color: #c92600;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -166,20 +164,20 @@ background-color: #c92600;
 }
 
 .nav, .navbar {
-margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .navbar-default {
-background-color: #dd2c00;
+  background-color: #dd2c00;
 }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-color: #fff;
-background-color: #555;
+  color: #fff;
+  background-color: #555;
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-border-color: #c92600;
+  border-color: #c92600;
 }
 
 .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
@@ -198,13 +196,12 @@ color: #fff;
 .dropdown-menu {
   background-color: #555;
   border: 1px solid #555;
-  border-radius: 0;
   font-size: 16px;
 }
 
 ul.dropdown-menu.cart {
-padding: 0;
-margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .dropdown.open .dropdown-menu.cart h3.widget-title {
@@ -216,7 +213,6 @@ margin: 0;
   width: 250px;
   background-color: #fff;
   border: 1px solid #eee;
-  border-radius: 0;
   z-index: 2000;
 }
 
@@ -314,7 +310,6 @@ color: #fff;
 .form-control,
 .chosen-container,
 .breadcrumb {
-  border-radius: 0px;
   font-size: 16px;
 }
 
@@ -437,13 +432,9 @@ color: #fff;
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
   margin-left: 0;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
 }
 .pagination > li:last-child > a,
 .pagination > li:last-child > span {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
 }
 
 .pagination > li > a:hover,
@@ -667,47 +658,42 @@ ul.payment-methods {
 }
 
 ul.shipping-methods li,
-ul.payment-methods li
-	{
-		border: 2px solid #fff;
-		border-radius: 0px;
-		margin: 0 0 1.5em 0;
-		padding: 0;
-	}
+ul.payment-methods li {
+  border: 2px solid #fff;
+  border-radius: 4px;
+  margin: 0 0 1.5em 0;
+  padding: 0; 
+}
 
 ul.shipping-methods li:hover,
 ul.payment-methods li:hover,
 ul.shipping-methods .selected,
-ul.payment-methods .selected
-	{
-		border: 2px solid #dd2c00;
-		border-radius: 0px;
-	}
+ul.payment-methods .selected {
+  border: 2px solid #dd2c00;
+  border-radius: 4px;
+}
 
 ul.shipping-methods li label,
-ul.payment-methods li label
-	{
-		height: 250px;
-		overflow: auto;
-		display: block;
-	}
+ul.payment-methods li label {
+  height: 250px;
+  overflow: auto;
+  display: block;
+}
 
 ul.shipping-methods li label span.title,
 ul.payment-methods li label span.title,
 ul.shipping-methods li label span.description,
 ul.payment-methods li label span.description,
 ul.shipping-methods li label span.image,
-ul.payment-methods li label span.image
-	{
-		display: block;
-		padding: .5em;
-	}
+ul.payment-methods li label span.image {
+  display: block;
+  padding: .5em;
+}
 
 ul.shipping-methods li label span.title,
-ul.payment-methods li label span.title
-	{
-		background: #eee;
-	}
+ul.payment-methods li label span.title {
+  background: #eee;
+}
 
 /* /Checkout */
 
@@ -798,10 +784,6 @@ div#spinner {
   font-size: 18px;
   font-weight: bold;
   z-index: 5;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
 }
 .shop-products .thumbnail .zoom {
   background-color: #364245;
@@ -817,21 +799,10 @@ div#spinner {
   vertical-align: middle;
   margin-left: -40px;
   margin-top: -40px;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
   border-radius: 40px;
-  -webkit-transition: all 0.2s ease-out;
-  -moz-transition: all 0.2s ease-out;
-  -ms-transition: all 0.2s ease-out;
-  -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
   filter: alpha(opacity = 0);
   opacity: 0;
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -ms-transform: scale(0);
-  -o-transform: scale(0);
   transform: scale(0);
 }
 .shop-products .thumbnail .zoom i {
@@ -893,8 +864,6 @@ transition: 0.4s;
   width: 40px;
   margin-left: -20px;
   margin-top: -20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
   border-radius: 20px;
 }
 .product-images .small .thumbnail .zoom i {
@@ -910,11 +879,7 @@ transition: 0.4s;
     vertical-align: middle;
     margin-left: -40px;
     margin-top: -40px;
-    -webkit-border-radius: 40px;
-    -moz-border-radius: 40px;
     border-radius: 40px;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
     background-clip: padding-box;
   }
   .product-images .small .thumbnail .zoom i {
@@ -984,21 +949,10 @@ transition: 0.4s;
   vertical-align: middle;
   margin-left: -40px;
   margin-top: -40px;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
   border-radius: 40px;
-  -webkit-transition: all 0.2s ease-out;
-  -moz-transition: all 0.2s ease-out;
-  -ms-transition: all 0.2s ease-out;
-  -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
   filter: alpha(opacity = 0);
   opacity: 0;
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -ms-transform: scale(0);
-  -o-transform: scale(0);
   transform: scale(0);
 }
 .product-images .thumbnail .zoom i {
@@ -1090,10 +1044,6 @@ box-shadow: 0;
   color: #dd2c00;
   font-size: 20px;
   z-index: 5;
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
 }
 .featured-categories .thumbnail .link {
   position: absolute;
@@ -1130,31 +1080,32 @@ transition: 0.4s;
 }
 
 .attributes li {
-    background-color: #fff;
-    margin: .5em .5em .5em 0;
-    border: 1px solid #eee;
+  background-color: #fff;
+  margin: .5em .5em .5em 0;
+  border: 1px solid #eee;
+  border-radius: 4px;
 }
 
 .attributes span.active {
-    display: block;
-    padding: 10px 15px;
-    background-color: #f5f5f5;
-    border: 1px solid #dd2c00;
+  display: block;
+  padding: 10px 15px;
+  background-color: #f5f5f5;
+  border: 1px solid #dd2c00;
+  border-radius: 4px;
 }
 
 pre {
-    display: block;
-    padding: 9.5px;
-    margin: 0 0 10px;
-    font-weight: normal;
-    color: #000;
-    word-break: break-all;
-    word-wrap: break-word;
-    background-color: transparent;
-    border: 0px solid transparent;
-    border-radius: 0px;
-    font-family: "Roboto", sans-serif !important;
-    font-size: 16px !important;
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-weight: normal;
+  color: #000;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: transparent;
+  border: 0px solid transparent;
+  font-family: "Roboto", sans-serif !important;
+  font-size: 16px !important;
 }
 
 #searchPreview {
