--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -33,7 +33,7 @@ select:focus {
   margin-bottom: 20px;
   box-shadow: 0 1px 8px rgba(0,0,0,.23),0 1px 8px rgba(0,0,0,.16);  
   border: 0;
-  border-radius: 4px;
+  border-radius: 0px;
 }
 
 .row.small {
@@ -149,6 +149,7 @@ header {
   min-height: 50px;
   margin-bottom: 20px;
   border: 0px;
+  border-radius: 0;
 }
 
 .navbar-toggle {
