--- a/app/webroot/css/vamshop.css
+++ b/app/webroot/css/vamshop.css
@@ -98,6 +98,10 @@ a#scrollup i{
   font-size: 16px;
 }
 
+a#scrollup:hover {
+  background: #d50000;
+}	
+
 .inner {
   background-color: transparent;
   position: relative;
