В multiple выборе select2 не показывался placeholder, исправлено через css стили

--- a/app/webroot/css/admin/admin.css
+++ b/app/webroot/css/admin/admin.css
@@ -1106,7 +1106,11 @@ pre {
 
 
 .select2-container {
-    min-width: 220px;
+    min-width: 240px;
+}
+
+.select2-container--default .select2-search--inline .select2-search__field{
+    width: auto !important;
 }
 
 /*]]>*/
